Fixed an issue where SVG avatars would get clipped in the profile header.

--- a/src/main/resources/scss/profile/components/_head.scss
+++ b/src/main/resources/scss/profile/components/_head.scss
@@ -186,11 +186,13 @@
 			display: flex;
 
 			.profile-avatar-container {
+				$size: 180px;
 				float: none;
 				margin: 0;
-				max-width: 180px;
-				width: 180px;
-				flex: 0 0.5 180px;
+				max-width: $size;
+				width: $size;
+				height: $size;
+				flex: 0 0.5 $size;
 			}
 
 			.profile-head-summary {
